--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
+- degree: Full Stack Webdeveloper Nanodegree  fsdfsdf
   uni: Udacity
   year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+  # awards: sfsdf
+  # summary: fsdfsef3se
